# apiary

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
examples/: petstore.api  taskmanager.api
src/: __init__.py  cli.py  orchestrator.py
src/generator/: __init__.py  code_generator.py
src/metamodel/: __init__.py  enums.py  models.py
src/parser/: __init__.py  ast_models.py  dsl_parser.py
src/parser/grammar/: RestAPILexer.g4  RestAPIParser.g4
src/transformer/: __init__.py  ast_to_model.py  type_mapper.py
src/validator/: __init__.py  model_validator.py
templates/: database.jinja  main.jinja  models.jinja  pyproject.jinja  readme.jinja
tests/integration/: test_pipeline.py
tests/unit/: test_parser.py  test_transformer.py  test_validator.py
