[project]
name = "apiary"
version = "0.1.0"
description = "Model-Driven Engineering toolkit for REST API generation"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.1",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
apiary = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
